# ue_rag_assistant

./: .gitignore  README.md  lab.ipynb  main.py  pyproject.toml
vectorstore_ue/ef33b16c-8bc4-4030-887d-f60c5087d257/: index_metadata.pickle
